--- a/app/src/main/res/layout/church_row.xml
+++ b/app/src/main/res/layout/church_row.xml
@@ -10,8 +10,7 @@
         android:id="@+id/ivChurchPp"
         android:layout_width="0dp"
         android:layout_height="@dimen/dim70"
-        android:layout_weight="2"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_weight="2"/>
 
     <LinearLayout
         android:id="@+id/llChurchDetails"
