--- a/app/src/main/res/layout/appbar_feed.xml
+++ b/app/src/main/res/layout/appbar_feed.xml
@@ -15,6 +15,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|center"
         android:layout_marginRight="@dimen/dim5"
+        android:visibility="visible"
         android:src="@drawable/ic_action_post"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/dim50"
+        android:layout_height="@dimen/dim50"
+        android:layout_gravity="right|center"
+        android:visibility="gone"/>
+
 
 </android.support.v7.widget.Toolbar>
