--- a/app/src/main/res/layout/fragment_companions.xml
+++ b/app/src/main/res/layout/fragment_companions.xml
@@ -21,5 +21,18 @@
             android:textColor="@color/white" />
 
     </android.support.v4.view.ViewPager>
+    <RelativeLayout
+        android:id="@+id/rlProgress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="@dimen/dim50"
+            android:layout_height="@dimen/dim50"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
 </FrameLayout>
