--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -11,14 +11,14 @@
             android:icon="@drawable/ic_message"
             android:title="Messages" />-->
         <item
-            android:id="@+id/nav_prayer_companion"
+            android:id="@+id/nav_my_friends"
             android:icon="@drawable/ic_companions"
+            android:title="Friends" />
+        <item
+            android:id="@+id/nav_prayer_companion"
+            android:icon="@drawable/ic_nav_action_follow"
             android:title="Follow Friends" />
         <!--<item
-            android:id="@+id/nav_my_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="My Profile" />
-        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
             android:title="Settings" />-->
