--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <!--<item name="android:windowTranslucentStatus">true</item>-->
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="colorAccent">@color/white</item>
+        <item name="colorAccent">@color/color_accent</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:windowBackground">@color/white</item>
         <!--<item name="android:navigationBarColor">@color/black</item>-->
